--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ subtitle: "Lab Manual for SEFSC Passive Acoustics Ecology Program"
 page-layout: full
 ---
 
-## SEFSC Passive Acoustic Ecology Program Lab Manual
+## SEFSC Passive Acoustics Ecology Program Lab Manual
 
 A key priority of the PAM SI is to build an open science culture across the agency by leveraging GitHub as a collaboration, coordination, and project management tool. To achieve this we will develop national and regional lab manuals that follow a parallel structure and link to each other. These manuals will serve as the primary storage location for all lab related information, including methods and data management, and will be a single access resource to support coordination across science center PAM programs.
 
