Updated information on hardware used
Updated info on seafloor moored acoustic recorders, towed hydrophone arrays, drifting acoustic recorders, sonobuoys, and acoustic and dive behavior tags

--- a/content/DataManagement.qmd
+++ b/content/DataManagement.qmd
@@ -2,6 +2,13 @@
 title: Data Management
 ---
 
+## PACM
+
+## NCEI
+
+## Tethys
+
+
 A data management section is required and should include the following information;
 
 -   Data Archive Methods
