--- a/content/Hardware.qmd
+++ b/content/Hardware.qmd
@@ -2,6 +2,43 @@
 title: Hardware
 ---
 
+
+## Seafloor Moored Acoustic Recorders
+
+While ship surveys allow us to study marine mammals over a broad area during a period of a few months, sometimes we want to study their occurrence at specific locations over extended periods of time. We do this by deploying autonomous moored recording instruments that remain on the seafloor for predetermined time periods. 
+
+Autonomous recorders include HARPs (High-frequency Acoustic Recording Packages), MARUs (Marine Acoustic Recording Units), and SoundTrapsTM. They are deployed in areas of interest and are capable of recording sounds for up to 18 months at a time. The amount of time that an instrument can record over depends on numerous factors, including the sampling frequency and duty cycle, and how much data storage and battery capacity the instrument has. When it is time to change the battery and data storage disks, we head out to sea to recover the instruments and collect the data recordings. Then we redeploy them to continue the autonomous sampling. 
+
+These moored recorders provide data on the spatial distribution of whales and dolphins over time. They are useful for understanding seasonal and longer term occurrence and movement patterns. In some cases, they can be used to estimate the density of whales and dolphins and to inform assessments of abundance and population trends.
+
+
+## Towed Hydrophone Array
+
+While at sea conducting line-transect surveys to look for whales and dolphins (cetaceans), acousticians deploy a towed hydrophone (underwater microphone) array. The array is towed approximately 300 meters behind the ship to detect and localize the sounds produced by toothed whales and dolphins (odontocetes).
+
+The array contains multiple hydrophones, each recording sounds as they arrive. The time differences in sound arrival on each hydrophone allow us to measure the sound's direction. As the ship continues on its path, the direction to the sounds changes. This allows scientists to localize the source of whistles and echolocation clicks.
+
+These data can be used to estimate the spatial distribution, density, and abundance of toothed whale and dolphin species. They offer complementary data to visual observations for use in marine mammal stock assessments. Additionally, the associated visual and acoustic detections can help us learn what call types are produced by each species. 
+
+
+## Drifting Acoustic Recorders (Gliders)
+POC: Heloise Frouin-Mouy
+
+
+## Sonobuoys
+
+During ship surveys, we also use expendable DIFAR (Directional Frequency Analysis and Ranging) sonobuoys to detect and record low‐frequency sounds produced by baleen whales (mysticetes). DIFAR sonobuoys contain a hydrophone and a compass in the sensor head and transmit signals from these sensors back to the ship via a VHF radio carrier. The acoustic signal ranges in frequency from 10–4,000 hertz, which is well suited for baleen whale calls that are generally below 1,000 hertz. The two compass signals contain directional information that help us determine where the sounds we hear are coming from and can be used to help us find and localize whales. 
+
+In the Gulf of Mexico, Southeast Fisheries Science Center scientists deploy pairs of these sonobuoys to localize the source of calls that are thought to be produced by the endangered Rice’s whale. This provides data to understand what types of calls these whales produce, how often they produce them, and in some cases, how far away we can detect the calls from them. We need this foundational information about what calls Rice’s whales produce to use autonomous moored recorders for longer term studies of their occurrence.
+
+
+## Acoustic and Dive Behavior Tags
+
+We also collect data on acoustic behavior, fine-scale movement, and dive behavior using specialized acoustic and kinematic data-logging tags, like the AcousondeTM tag, that attach to marine mammals. These tags provide us with a view of what whales and dolphins do below the surface. They allow us to measure their dive depth, movements, and behavior, and record the sounds produced near and by the tagged animal. 
+
+The tags attach to the whale’s back via suction cups and remain on the whale for a few hours to a few days. Once they detach from the whales, we use satellite and VHF transmitters to locate and recover them and access the recorded data. These dive data, combined with acoustic recordings from the tag, give us insight into the acoustic behavior of these animals. They help us learn about the animals’ vocal cue rates and how the calls they produce relate to their behavior underwater. This helps us to interpret the data we collect with other passive acoustic tools.
+
+
 A hardware section is required and should include the following information;
 
 -   Information on your recorders
