--- a/index.qmd
+++ b/index.qmd
@@ -6,7 +6,10 @@ page-layout: full
 
 ## SEFSC Passive Acoustic Ecology Program Lab Manual
 
-![](content/images/Rices.png) *Rice’s whale (Balaenoptera ricei). Credit: NOAA Fisheries (MMPA Permit #21938)*
+![](content/images/Rices.png) 
+
+*Rice’s whale (Balaenoptera ricei). Credit: NOAA Fisheries (MMPA Permit #21938)*
+
 
 The Passive Acoustic Ecology Program conducts a variety of [research projects](https://www.fisheries.noaa.gov/science-data/passive-acoustic-research-southeast-fisheries-science-center) that use passive acoustics to assess populations and improve our understanding of cetaceans in the Gulf of Mexico and U.S. waters of the Western Atlantic. We are part of the Marine Mammal and Turtle Division at NOAA's Southeast Fisheries Science Center in Miami, Florida.
 
@@ -14,7 +17,7 @@ This lab manual serves as the go-to handbook for the behind-the-scenes informati
 
 ## Team Members
 
-### Current:
+### Current Members:
 
 [Melissa Soldevilla](https://www.fisheries.noaa.gov/contact/melissa-soldevilla-phd), Passive Acoustic Ecology Program Lead
 
@@ -26,13 +29,13 @@ This lab manual serves as the go-to handbook for the behind-the-scenes informati
 
 [Lynne Hodge](https://www.fisheries.noaa.gov/contact/lynne-hodge-phd), Acoustic technician for LISTEN GoMex project, shipping noise and marine mammal characterization
 
-Shannon Merkle
+Shannon Merkle, Research associate, North Atlantic right whale call analysis and field technician
 
 Emily Stens, MPS student 2024
 
 [Ludovic Tenorio](https://www.fisheries.noaa.gov/contact/ludovic-tenorio-halle-phd), Postdoctoral associate, Rice’s whale studies
 
-### Past:
+### Previous Members:
 
 Jonathan Reid
 
@@ -46,7 +49,7 @@ Miles Lubas, Undergraduate Fall 2024
 
 Vanessa Lundsten, post-MPS volunteer 2023
 
-Alexandria Tennant, Undergraduate Summer 2023
+Alexandria Tennant, Savannah State University Undergraduate Summer 2023, Rice's whale spatiotemporal occurrence in the Gulf of Mexico using passive acoustics
 
 ## Partners
 
