--- a/content/DataManagement.qmd
+++ b/content/DataManagement.qmd
@@ -2,27 +2,41 @@
 title: Data Management
 ---
 
+## NCEI Data Archive
+
+All [LISTEN GoMex](https://www.fisheries.noaa.gov/science-data/passive-acoustic-research-southeast-fisheries-science-center#listen-gomex) raw data (xwavs) will be or are publicly accessible through [NCEI Passive Acoustics Data Archive](https://www.ncei.noaa.gov/products/passive-acoustic-data).
+
+
+## OBIS-SEAMAP
+
+We will be archiving the 2020-2023 LISTEN GoMex marine mammal detection data in the [OBIS-SEAMAP](https://seamap.env.duke.edu/) database.
+
+
 ## PACM
 
-## NCEI
+The [Passive Acoustic Cetacean Map](https://apps-nefsc.fisheries.noaa.gov/pacm/#/), or PACM, is a visual representation of acosutic detections of species. The 2020-2023 LISTEN GoMex marine mammal detection data are archived and available to view on the PACM.
+
 
 ## Tethys
 
+The LISTEN GoMex deployment metadata and detection data are archived in our lab's Tethys database.
 
-A data management section is required and should include the following information;
 
--   Data Archive Methods
-    -   Information on where your data is archived (PACM, NCEI, Tethys, Internal databases, etc)
-    -   [SAEL Example](https://sael-swfsc.github.io/SAEL-lab-manual/content/Data-Archive.html)
--   Species reference guide for your region
-    -   Develop a species and call type library for your region
-    -   This can include spectrograms of calls and sound clips
-    -   PIFSC working on this, use them as an example once finalized
-    -   [SAEL Example](https://sael-swfsc.github.io/SAEL-lab-manual/content/Data-SpeciesAndCallTypes.html)
--   Media
-    -   Links to sound archives, media archives, web sites, blogs, etc.
-    -   [SAEL Example](https://sael-swfsc.github.io/SAEL-lab-manual/content/media.html)
 
-This can be a section with subpages or a qmd
+<!-- A data management section is required and should include the following information; -->
 
-[Glider Lab Manual](https://swfsc.github.io/glider-lab-manual/content/data-management.html)
+<!-- -   Data Archive Methods -->
+<!--     -   Information on where your data is archived (PACM, NCEI, Tethys, Internal databases, etc) -->
+<!--     -   [SAEL Example](https://sael-swfsc.github.io/SAEL-lab-manual/content/Data-Archive.html) -->
+<!-- -   Species reference guide for your region -->
+<!--     -   Develop a species and call type library for your region -->
+<!--     -   This can include spectrograms of calls and sound clips -->
+<!--     -   PIFSC working on this, use them as an example once finalized -->
+<!--     -   [SAEL Example](https://sael-swfsc.github.io/SAEL-lab-manual/content/Data-SpeciesAndCallTypes.html) -->
+<!-- -   Media -->
+<!--     -   Links to sound archives, media archives, web sites, blogs, etc. -->
+<!--     -   [SAEL Example](https://sael-swfsc.github.io/SAEL-lab-manual/content/media.html) -->
+
+<!-- This can be a section with subpages or a qmd -->
+
+<!-- [Glider Lab Manual](https://swfsc.github.io/glider-lab-manual/content/data-management.html) -->
