added subtitles to pages
wanted to include SEFSC Passive Acoustic Ecology Program as a subtitle on all of our pages

--- a/content/AnalysisMethods.qmd
+++ b/content/AnalysisMethods.qmd
@@ -1,5 +1,6 @@
 ---
 title: Analysis Methods
+subtitle: "SEFSC Passive Acoustic Ecology Program"
 ---
 
 ## Raw Acoustic Data
@@ -9,7 +10,7 @@ title: Analysis Methods
 
 ### Odontocete Analyses
 
-#### click Classification
+#### Click Classification
 
 #### Density Estimation
 
