--- a/content/SoftwareAnalysis.qmd
+++ b/content/SoftwareAnalysis.qmd
@@ -1,5 +1,6 @@
 ---
 title: Software & Analysis Methods
+subtitle: "SEFSC Passive Acoustic Ecology Program"
 ---
 
 A software and analysis methods section is required and should include subpages for both topics (analysis methods can be a subsection with pages for different anaylsis methods topics).
