--- a/content/Onboarding.qmd
+++ b/content/Onboarding.qmd
@@ -9,7 +9,8 @@ subtitle: "SEFSC Passive Acoustic Ecology Program"
 
 ### Sperm whale analysis
 
-[Getting Started - Sperm Whale 3D Tracking Project](https://docs.google.com/document/d/1dZIGURhCEpHqiqKNrRGJXT7Fx7sGwGP6/edit?usp=drive_link&ouid=108853723995482129268&rtpof=true&sd=true)
+[Getting Started - Sperm Whale 3D Tracking Project]()
+<!-- (https://docs.google.com/document/d/1dZIGURhCEpHqiqKNrRGJXT7Fx7sGwGP6/edit?usp=drive_link&ouid=108853723995482129268&rtpof=true&sd=true) -->
 
 
 This page is optional but can be used as a landing page for new lab members. You can include introductory information, links to must read papers, new hire resources, goal setting information, etc.
