--- a/index.qmd
+++ b/index.qmd
@@ -23,6 +23,8 @@ This lab manual serves as the go-to handbook for the behind-the-scenes informati
 
 ### Researchers
 
+Manolo Castellote, Lead for North Atlantic Right Whale studies
+
 [Amanda Debich](https://www.fisheries.noaa.gov/contact/amanda-debich), Lead acoustic technician for Rice’s whale studies
 
 [Heloise Frouin-Mouy](https://www.fisheries.noaa.gov/contact/heloise-frouin-mouy-phd), Assistant scientist for LISTEN GoMex project, odontocete density estimation
