--- a/index.qmd
+++ b/index.qmd
@@ -43,7 +43,7 @@ Emily Stens
 
 ### Former Members
 
-Researcher Staff: Shannon Merkle, Jonathan Reid
+Researcher Staff: Shannon Merkle, Jonathan Reid, Katrina Ternus
 
 Graduate Students: Sierra Jarriel, Itzel Perez Carballo
 
