updates to DataManagement
provided links to NCEI raw acoustic data and commented out Tethys since we currently aren't using

--- a/content/DataManagement.qmd
+++ b/content/DataManagement.qmd
@@ -5,7 +5,7 @@ subtitle: "SEFSC Passive Acoustic Ecology Program"
 
 ## NCEI Data Archive
 
-All [LISTEN GoMex](https://www.fisheries.noaa.gov/science-data/passive-acoustic-research-southeast-fisheries-science-center#listen-gomex) raw data (xwavs) will be or are publicly accessible through [NCEI Passive Acoustics Data Archive](https://www.ncei.noaa.gov/products/passive-acoustic-data).
+All [Gulf of Mexico Rice's whale acoustic data](https://data.noaa.gov/metaview/page?xml=NOAA/NESDIS/NGDC/MGG/passive_acoustic//iso/xml/SEFSC_GOM_Moored_Raw_Data.xml&view=getDataView) and all [LISTEN GoMex raw data (xwavs)](https://data.noaa.gov/metaview/page?xml=NOAA/NESDIS/NGDC/MGG/passive_acoustic//iso/xml/LISTEN_GoMex_Raw_Audio.xml&view=getDataView) will be or are publicly accessible through [NCEI Passive Acoustics Data Archive](https://www.ncei.noaa.gov/products/passive-acoustic-data).
 
 
 ## OBIS-SEAMAP
@@ -15,12 +15,12 @@ We will be archiving the 2020-2023 LISTEN GoMex marine mammal detection data in 
 
 ## PACM
 
-The [Passive Acoustic Cetacean Map](https://apps-nefsc.fisheries.noaa.gov/pacm/#/), or PACM, is a visual representation of acosutic detections of species. The 2020-2023 LISTEN GoMex marine mammal detection data are archived and available to view on the PACM.
+The [Passive Acoustic Cetacean Map](https://apps-nefsc.fisheries.noaa.gov/pacm/#/), or PACM, is a visual representation of acoustic detections of species. The 2020-2023 LISTEN GoMex marine mammal detection data are archived and available to view on the PACM.
 
 
-## Tethys
+<!-- ## Tethys -->
 
-The LISTEN GoMex deployment metadata and detection data are archived in our lab's Tethys database.
+<!-- The LISTEN GoMex deployment metadata and detection data are archived in our lab's Tethys database. -->
 
 
 
