--- a/content/Onboarding.qmd
+++ b/content/Onboarding.qmd
@@ -3,13 +3,16 @@ title: Onboarding
 subtitle: "SEFSC Passive Acoustic Ecology Program"
 ---
 
-## New Staff
+## New Staff, Interns, and Volunteers
 
-## New Interns and Volunteers
+[Onboarding Material](https://sites.google.com/noaa.gov/nmfs-sefsc-mmtd/administrative-support/onboarding-new-employeesinterns?pli=1)
 
-### Sperm whale analysis
+[Required Training](https://sites.google.com/noaa.gov/nmfs-sefsc-mmtd/administrative-support/training)
 
-[Getting Started - Sperm Whale 3D Tracking Project]()
+
+<!-- ### Sperm whale analysis -->
+
+<!-- [Getting Started - Sperm Whale 3D Tracking Project]() -->
 <!-- (https://docs.google.com/document/d/1dZIGURhCEpHqiqKNrRGJXT7Fx7sGwGP6/edit?usp=drive_link&ouid=108853723995482129268&rtpof=true&sd=true) -->
 
 
