--- a/index.qmd
+++ b/index.qmd
@@ -23,7 +23,7 @@ This lab manual serves as the go-to handbook for the behind-the-scenes informati
 
 ### Researchers
 
-Manolo Castellote, Lead for North Atlantic Right Whale studies
+Manuel (Manolo) Castellote, Lead for North Atlantic Right Whale studies
 
 [Amanda Debich](https://www.fisheries.noaa.gov/contact/amanda-debich), Lead acoustic technician for Rice’s whale studies
 
