--- a/content/TrainingMaterial.qmd
+++ b/content/TrainingMaterial.qmd
@@ -13,3 +13,9 @@ Rice's Whale Western GoMX Call Examples
 ## Software Training Guides
 
 Triton Guide
+
+
+### Sperm whale analysis
+
+[Getting Started - Sperm Whale 3D Tracking Project]()
+<!-- (https://docs.google.com/document/d/1dZIGURhCEpHqiqKNrRGJXT7Fx7sGwGP6/edit?usp=drive_link&ouid=108853723995482129268&rtpof=true&sd=true) -->
